attached_assets/Pasted-Run-npm-run-build-nodeq-mindmap-2-0-0-build-rollup-c-node-2122-Warning-To-load-an-ES-module--1754953902306_1754953902307.txt
Run npm run build
> nodeq-mindmap@2.0.0 build
> rollup -c
(node:2122) Warning: To load an ES module, set "type": "module" in the package.json or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
[!] RollupError: Node tried to load your configuration file as CommonJS even though it is likely an ES module. To resolve this, change the extension of your configuration to ".mjs", set "type": "module" in your package.json file or pass the "--bundleConfigAsCjs" flag.
Original error: Cannot use import statement outside a module
https://rollupjs.org/command-line-interface/#bundleconfigascjs
/home/runner/work/nodeq-mindmap/nodeq-mindmap/rollup.config.js:2
import typescript from '@rollup/plugin-typescript';
^^^^^^
SyntaxError: Node tried to load your configuration file as CommonJS even though it is likely an ES module. To resolve this, change the extension of your configuration to ".mjs", set "type": "module" in your package.json file or pass the "--bundleConfigAsCjs" flag.
Original error: Cannot use import statement outside a module
    at internalCompileFunction (node:internal/vm:76:18)
    at wrapSafe (node:internal/modules/cjs/loader:1283:20)
    at Module._compile (node:internal/modules/cjs/loader:1328:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
    at Module.load (node:internal/modules/cjs/loader:1203:32)
    at Module._load (node:internal/modules/cjs/loader:1019:12)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:203:29)
    at ModuleJob.run (node:internal/modules/esm/module_job:195:25)
    at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
    at async importModuleDynamicallyWrapper (node:internal/vm/module:432:15)
  [cause] /home/runner/work/nodeq-mindmap/nodeq-mindmap/rollup.config.js:2
  import typescript from '@rollup/plugin-typescript';
  ^^^^^^
  
  SyntaxError: Cannot use import statement outside a module
      at internalCompileFunction (node:internal/vm:76:18)
      at wrapSafe (node:internal/modules/cjs/loader:1283:20)
      at Module._compile (node:internal/modules/cjs/loader:1328:27)
      at Module._extensions..js (node:internal/modules/cjs/loader:1422:10)
      at Module.load (node:internal/modules/cjs/loader:1203:32)
      at Module._load (node:internal/modules/cjs/loader:1019:12)
      at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:203:29)
      at ModuleJob.run (node:internal/modules/esm/module_job:195:25)
      at async ModuleLoader.import (node:internal/modules/esm/loader:337:24)
      at async importModuleDynamicallyWrapper (node:internal/vm/module:432:15)
Error: Process completed with exit code 1.
0s
0s
0s
0s
